Openshift/First-task/elk_stack_plus.yml
#elasticsearch
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: elkefk
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  clusterIP: None
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-cluster
  namespace: elkefk
spec:
  serviceName: elasticsearch
  replicas: 3
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
        volumeMounts:
        - name: elasticsearch-config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
      volumes:
      - name: elasticsearch-config
        configMap:
          name: elasticsearch-config
---
#kibana
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elkefk
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elkefk
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.6.1
        volumeMounts:
        - name: kibana-config
          mountPath: /usr/share/kibana/config/kibana.yml
          subPath: kibana.yml
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
      volumes:
      - name: kibana-config
        configMap:
          name: kibana-config
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: logstash
  namespace: elkefk
  spec:
  template:
    metadata:
      labels:
        app: logstash
    spec:
      hostname: logstash
      containers:
      - name: logstash
        ports:
          - containerPort: 9600
            name: logstash
        image: docker.elastic.co/logstash/logstash:7.6.1
        volumeMounts:
        - name: logstash-config
          mountPath: /usr/share/logstash/pipeline/logstash.conf
          subPath: logstash.conf
        - name: logstash-config-yaml
          mountPath: /usr/share/logstash/config/logstash.yml
          subPath: logstash.yml
        command:
        - logstash
      volumes:
      # Previously defined ConfigMap object.
      - name: logstash-config
        configMap:
          name: logstash-config
      - name: logstash-config-yaml
        configMap:
          name: logstash-config-yaml
---
kind: Service
apiVersion: v1
metadata:
  name: logstash
  namespace: elkefk
spec:
  type: NodePort
  selector:
    app: logstash
  clusterIP: None
  #type: ClusterIP
  sessionAffinity: None
  ports:
  - protocol: TCP
    port: 9600
    targetPort: 9600
    name: logstash
---
# #Filebeat
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: filebeat-config
#   namespace: elkefk
#   labels:
#     k8s-app: filebeat
# data:
#   filebeat.yml: |-
#     filebeat.inputs:
#     - type: container
#       paths:
#         - /var/log/containers/*.log
#       processors:
#         - add_kubernetes_metadata:
#             host: ${NODE_NAME}
#             matchers:
#             - logs_path:
#                 logs_path: "/var/log/containers"
#     processors:
#       - add_cloud_metadata:
#       - add_host_metadata:
#       - add_kubernetes_metadata:
#       #- copy_fields:
#       #    fields:
#       #      - from: message
#       #        to: event.audit
#       #        fail_on_error: false
#       #        ignore_missing: true
#       #    when:
#       #      contains:
#       #        message: "[AUDIT"
#       #- copy_fields:
#       #    fields:
#       #      - from: message
#       #        to: event.debug
#       #        fail_on_error: false
#       #        ignore_missing: true
#       #    when:
#       #      contains:
#       #        message: "DEBUG"
#     setup.template.name: "-index-"
#     setup.template.pattern: "-index-*"
#     output.logstash:
#       hosts: ['${LOGSTASH_HOSTS}']
#       index: "-index-"
# ---
# apiVersion: apps/v1
# kind: DaemonSet
# metadata:
#   name: filebeat
#   namespace: elkefk
#   labels:
#     k8s-app: filebeat
# spec:
#   selector:
#     matchLabels:
#       k8s-app: filebeat
#   template:
#     metadata:
#       labels:
#         k8s-app: filebeat
#     spec:
#       serviceAccountName: filebeat
#       terminationGracePeriodSeconds: 30
#       hostNetwork: true
#       dnsPolicy: ClusterFirstWithHostNet
#       containers:
#       - name: filebeat
#         image: docker.elastic.co/beats/filebeat:7.6.0
#         args: [
#           "-c", "/etc/filebeat.yml",
#           "-e",
#         ]
#         env:
#         - name: LOGSTASH_HOSTS
#           value: logstash.elkefk.svc.cluster.local:9600
#         - name: ELASTICSEARCH_HOST
#           value: elasticsearch.elkefk.svc.cluster.local
#         - name: ELASTICSEARCH_PORT
#           value: "9200"
#         - name: ELASTICSEARCH_USERNAME
#           value: elastic
#         - name: ELASTICSEARCH_PASSWORD
#           value: changeme
#         - name: ELASTIC_CLOUD_ID
#           value:
#         - name: ELASTIC_CLOUD_AUTH
#           value:
#         - name: NODE_NAME
#           valueFrom:
#             fieldRef:
#               fieldPath: spec.nodeName
#         securityContext:
#           runAsUser: 0
#           # If using Red Hat OpenShift uncomment this:
#           privileged: true
#         resources:
#           limits:
#             memory: 200Mi
#           requests:
#             cpu: 100m
#             memory: 100Mi
#         volumeMounts:
#         - name: config
#           mountPath: /etc/filebeat.yml
#           readOnly: true
#           subPath: filebeat.yml
#         - name: data
#           mountPath: /usr/share/filebeat/data
#         - name: varlibdockercontainers
#           mountPath: /var/lib/docker/containers
#           readOnly: true
#         - name: varlog
#           mountPath: /var/log
#           readOnly: true
#       volumes:
#       - name: config
#         configMap:
#           defaultMode: 0600
#           name: filebeat-config
#       - name: varlibdockercontainers
#         hostPath:
#           path: /var/lib/docker/containers
#       - name: varlog
#         hostPath:
#           path: /var/log
#       # data folder stores a registry of read status for all files, so we don't send everything again on a Filebeat pod restart
#       - name: data
#         hostPath:
#           path: /var/lib/filebeat-data
#           type: DirectoryOrCreate
# ---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRoleBinding
# metadata:
#   name: filebeat
# subjects:
# - kind: ServiceAccount
#   name: filebeat
#   namespace: elkefk
# roleRef:
#   kind: ClusterRole
#   name: filebeat
#   apiGroup: rbac.authorization.k8s.io
# ---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRole
# metadata:
#   name: filebeat
#   labels:
#     k8s-app: filebeat
# rules:
# - apiGroups: [""] # "" indicates the core API group
#   resources:
#   - namespaces
#   - pods
#   verbs:
#   - get
#   - watch
#   - list
# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: filebeat
#   namespace: elkefk
#   labels:
#     k8s-app: filebeat
# ---
# #Metricbeat
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: metricbeat-daemonset-config
#   namespace: kube-system
#   labels:
#     k8s-app: metricbeat
# data:
#   metricbeat.yml: |-
#     metricbeat.config.modules:
#       # Mounted `metricbeat-daemonset-modules` configmap:
#       path: ${path.config}/modules.d/*.yml
#       # Reload module configs as they change:
#       reload.enabled: false
#     # To enable hints based autodiscover uncomment this:
#     metricbeat.autodiscover:
#       providers:
#         - type: kubernetes
#           node: ${NODE_NAME}
#           hints.enabled: true
#     processors:
#       - add_cloud_metadata:
#       - add_docker_metadata:
#       - add_host_metadata:
#       - add_kubernetes_metadata:
#     cloud.id: ${ELASTIC_CLOUD_ID}
#     cloud.auth: ${ELASTIC_CLOUD_AUTH}
#     output.elasticsearch:
#       hosts: ["http://elasticsearch.elkefk.svc.cluster.local:9200"]
#       username: "elastic"
#       password: "changeme"
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: metricbeat-daemonset-modules
#   namespace: kube-system
#   labels:
#     k8s-app: metricbeat
# data:
#   system.yml: |-
#     - module: system
#       period: 10s
#       metricsets:
#         - cpu
#         - load
#         - memory
#         - network
#         - process
#         - process_summary
#         #- core
#         #- diskio
#         #- socket
#       processes: ['.*']
#       process.include_top_n:
#         by_cpu: 5      # include top 5 processes by CPU
#         by_memory: 5   # include top 5 processes by memory
#     - module: system
#       period: 1m
#       metricsets:
#         - filesystem
#         - fsstat
#       processors:
#       - drop_event.when.regexp:
#           system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host|lib|snap)($|/)'
#   kubernetes.yml: |-
#     - module: kubernetes
#       metricsets:
#         - node
#         - system
#         - pod
#         - container
#         - volume
#       period: 10s
#       host: ${NODE_NAME}
#       hosts: ["https://${HOSTNAME}:10250"]
#       bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
#       ssl.verification_mode: "none"
#       # If using Red Hat OpenShift remove ssl.verification_mode entry and
#       # uncomment these settings:
#       ssl.certificate_authorities:
#         - /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
#     - module: kubernetes
#       metricsets:
#         - proxy
#       period: 10s
#       host: ${NODE_NAME}
#       hosts: ["localhost:10249"]
# ---
# # Deploy a Metricbeat instance per node for node metrics retrieval
# apiVersion: apps/v1
# kind: DaemonSet
# metadata:
#   name: metricbeat
#   namespace: kube-system
#   labels:
#     k8s-app: metricbeat
# spec:
#   selector:
#     matchLabels:
#       k8s-app: metricbeat
#   template:
#     metadata:
#       labels:
#         k8s-app: metricbeat
#     spec:
#       serviceAccountName: metricbeat
#       terminationGracePeriodSeconds: 30
#       hostNetwork: true
#       dnsPolicy: ClusterFirstWithHostNet
#       containers:
#       - name: metricbeat
#         image: docker.elastic.co/beats/metricbeat:7.6.1
#         args: [
#           "-c", "/etc/metricbeat.yml",
#           "-e",
#           "-system.hostfs=/hostfs",
#         ]
#         env:
#         - name: ELASTICSEARCH_HOST
#           value: elasticsearch.elkefk.svc.cluster.local
#         - name: ELASTICSEARCH_PORT
#           value: "9200"
#         - name: ELASTIC_CLOUD_ID
#           value:
#         - name: ELASTIC_CLOUD_AUTH
#           value:
#         - name: ELASTICSEARCH_USERNAME
#           value: elastic
#         - name: ELASTICSEARCH_PASSWORD
#           value: changeme
#         - name: NODE_NAME
#           valueFrom:
#             fieldRef:
#               fieldPath: spec.nodeName
#         securityContext:
#           runAsUser: 0
#         resources:
#           limits:
#             memory: 200Mi
#           requests:
#             cpu: 100m
#             memory: 100Mi
#         volumeMounts:
#         - name: config
#           mountPath: /etc/metricbeat.yml
#           readOnly: true
#           subPath: metricbeat.yml
#         - name: modules
#           mountPath: /usr/share/metricbeat/modules.d
#           readOnly: true
#         - name: dockersock
#           mountPath: /var/run/docker.sock
#         - name: proc
#           mountPath: /hostfs/proc
#           readOnly: true
#         - name: cgroup
#           mountPath: /hostfs/sys/fs/cgroup
#           readOnly: true
#       volumes:
#       - name: proc
#         hostPath:
#           path: /proc
#       - name: cgroup
#         hostPath:
#           path: /sys/fs/cgroup
#       - name: dockersock
#         hostPath:
#           path: /var/run/docker.sock
#       - name: config
#         configMap:
#           defaultMode: 0600
#           name: metricbeat-daemonset-config
#       - name: modules
#         configMap:
#           defaultMode: 0600
#           name: metricbeat-daemonset-modules
#       - name: data
#         hostPath:
#           path: /var/lib/metricbeat-data
#           type: DirectoryOrCreate
# ---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRoleBinding
# metadata:
#   name: metricbeat
# subjects:
# - kind: ServiceAccount
#   name: metricbeat
#   namespace: kube-system
# roleRef:
#   kind: ClusterRole
#   name: metricbeat
#   apiGroup: rbac.authorization.k8s.io
# ---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRole
# metadata:
#   name: metricbeat
#   labels:
#     k8s-app: metricbeat
# rules:
# - apiGroups: [""]
#   resources:
#   - nodes
#   - namespaces
#   - events
#   - pods
#   verbs: ["get", "list", "watch"]
# - apiGroups: ["extensions"]
#   resources:
#   - replicasets
#   verbs: ["get", "list", "watch"]
# - apiGroups: ["apps"]
#   resources:
#   - statefulsets
#   - deployments
#   - replicasets
#   verbs: ["get", "list", "watch"]
# - apiGroups:
#   - ""
#   resources:
#   - nodes/stats
#   verbs:
#   - get
# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: metricbeat
#   namespace: kube-system
#   labels:
#     k8s-app: metricbeat
# ---
