Openshift/First-task/serviceexternal.yml
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  clusterIP: 10.217.5.200
  externalIPs:
  - 192.168.132.253
  externalTrafficPolicy: Cluster
  ports:
  - name: highport
    nodePort: 31903
    port: 30102
    protocol: TCP
    targetPort: 30102
  selector:
    app: web
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.132.253
