Openshift/First-task/efk1.yaml
apiVersion: v1
kind: Template
objects:

- apiVersion: v1
  kind: ImageStream
  metadata:
    name: elasticsearch-oss
    app: efk
  spec:
    tags:
    - from:
        kind: DockerImage
        name: docker.elastic.co/elasticsearch/elasticsearch-oss:6.3.2
      name: 6.3.2

- apiVersion: v1
  kind: ImageStream
  metadata:
    name: kibana-oss
    app: efk
  spec:
    tags:
    - from:
        kind: DockerImage
        name: docker.elastic.co/kibana/kibana-oss:6.3.2
      name: 6.3.2

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: efk
    name: efk
  spec:
    replicas: 1
    strategy:
      type: Rolling
    selector:
      app: efk
      deploymentconfig: efk
    template:
      metadata:
        labels:
          app: efk
          deploymentconfig: efk
      spec:
        containers:
        - name: efk-elastic
          image: 172.30.1.1:5000/myproject/elasticsearch-oss:6.3.2
        - name: efk-kibana
          image: 172.30.1.1:5000/myproject/kibana-oss:6.3.2
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: efk
    name: efk-elastic
  spec:
    ports:
    - port: 9200
      protocol: TCP
      targetPort: 9200
    selector:
      app: efk
      deploymentconfig: efk
    type: ClusterIP

- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: efk
    name: efk-kibana
  spec:
    ports:
    - port: 5601
      protocol: TCP
      targetPort: 5601
    selector:
      app: efk
      deploymentconfig: efk
    type: ClusterIP

- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: efk
    name: efk-kibana
  spec:
    to:
      kind: Service
      name: efk-kibana
