Openshift/First-task/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    route.openshift.io/termination: "reencrypt" 
spec:
  rules:
  - host: www.example.com
    http:
      - paths:
        pathType: ImplementationSpecific 
      - backend:
          serviceName: frontend
          servicePort: 443
      
  tls:
  - hosts:
    - www.example.com
    secretName: example-com-tls-certificate
