Openshift/First-task/ingress2.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-gnztq
  ownerReferences:
  - apiVersion: networking.k8s.io/v1
    controller: true
    kind: Ingress
    name: frontend
    uid: 4e6c59cc-704d-4f44-b390-617d879033b6
spec:
  host: www.example.com
  to:
    kind: Service
    name: frontend
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
          MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDAFtffJ+8o5asJ
[...]
      I6NMIh4zG7tkwxnb5Coy3kwUMA==  
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIID/TCCAuWgAwIBAgIUEmKC/Dz2ECjKe7/nUL0Z3LDBji0wDQYJKoZIhvcNAQEL
[...]
      NWTt8KKWAZA9Ee35/XZnLBM=
      -----END RSA PRIVATE KEY-----
    termination: reencrypt
