Openshift/First-task/kibana.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: example
spec:
  host: example.local
  wildcardPolicy: None
  to:
    name: example
---
kind: Service
apiVersion: v1
metadata:
  name: example
spec:
  selector:
    k8s-app: example
  ports:
  - port: 80
    targetPort: 8080
