Openshift/First-task/router.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: example1
spec:
  host: example.local
  wildcardPolicy: None
  to:
    kind: ReplicaSet
    name: example
  tls:
    termination: edge
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDAFtffJ+8o5asJ
[...]
      I6NMIh4zG7tkwxnb5Coy3kwUMA==
      -----END PRIVATE KEY-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIID/TCCAuWgAwIBAgIUEmKC/Dz2ECjKe7/nUL0Z3LDBji0wDQYJKoZIhvcNAQEL
[...]
      NWTt8KKWAZA9Ee35/XZnLBM=
      -----END CERTIFICATE-----


---
kind: Service
apiVersion: v1
metadata:
  name: example1
spec:
  selector:
    k8s-app: example
  ports:
  - port: 80
    targetPort: 8080
